# anime-stock

./: .gitignore  README.md  anime_stock.service  pyproject.toml  requirements.txt  test_dashboard_data.py  update_predictions.py
.streamlit/: config.toml
debug/: backfill_translations.py  check_data.py  check_predictions.py  check_prices.py  check_query.py  debug_updates.py  test_fixed_logic.py
scripts/: add_ticker_to_news.sql  add_ukrainian_translations.sql  init_db.sql  refresh_data.sh  setup_cron.sh
src/anime_stock/: __init__.py  config.py  main.py
src/anime_stock/analysis/: __init__.py  predictor.py  sentiment.py
src/anime_stock/collectors/: __init__.py  news_scraper.py  stock_collector.py
src/anime_stock/dashboard/: __init__.py  app.py  translations.py
src/anime_stock/database/: __init__.py  connection.py  repositories.py
src/anime_stock/scripts/: __init__.py  daily_collect.py
